site/docs/v0.4.0/en/components/follow-up-suggestions.mdx
# Follow-up Suggestions

Follow-up Suggestions offers a small set of relevant next actions after a stable result. Suggestions never replace the primary composer.

<Preview class="w-full max-w-3xl">
  <nav class="follow-up-suggestions" aria-label="Suggested follow-up actions"><strong>Continue with</strong><ul><li><button type="button">Review the changed files</button></li><li><button type="button">Run the full release checks</button></li><li><button type="button">Draft a release summary</button></li></ul></nav>
</Preview>

## Usage

```html
<nav class="follow-up-suggestions" aria-label="Suggested follow-up actions">
  <strong>Continue with</strong>
  <ul><li><button type="button">Review the changed files</button></li></ul>
</nav>
```

### Parameters

| API | Values | Purpose |
| --- | --- | --- |
| Named `<nav>` | Required | Groups next-action controls |
| Direct `<ul>` | Required | Unordered suggestion list |
| Native button or link | Required per item | Submit text or navigate |

## States and variants

Show two to four specific actions. Hide the component when no suggestion is useful instead of filling space with generic prompts.

## Accessibility

The navigation label distinguishes suggestions from task navigation. Buttons describe the action that will occur.

## React

```tsx
import { FollowUpSuggestions } from "@a3s-lab/ui/react";

export function Example() {
  return (
    <FollowUpSuggestions aria-label="Follow-up Suggestions"><a href="#current" aria-current="page">Current page</a></FollowUpSuggestions>
  );
}
```

The adapter replaces only the documented semantic root and adds no wrapper; its children keep the HTML contract shown above.

## Vue

```vue
<script setup>
import { FollowUpSuggestions } from "@a3s-lab/ui/vue";

</script>

<template>
  <FollowUpSuggestions aria-label="Follow-up Suggestions"><a href="#current" aria-current="page">Current page</a></FollowUpSuggestions>
</template>
```

The adapter replaces only the documented semantic root and adds no wrapper; its children keep the HTML contract shown above.
