site/docs/v0.4.1/en/components/follow-up-suggestions.mdx
# Follow-up Suggestions

Follow-up Suggestions offers a small set of relevant next actions after a stable result. Suggestions never replace the primary composer.

<Preview class="w-full max-w-3xl">
  <nav
    class="follow-up-suggestions"
    aria-label="Suggested follow-up actions"
    data-follow-up-suggestions-primary-demo="en"
  >
    <strong data-follow-up-heading>Continue with</strong>
    <ul data-follow-up-list>
      <li>
        <button type="button" data-follow-up-action="review-files">
          Review the changed files
        </button>
      </li>
      <li>
        <button
          type="button"
          data-follow-up-action="release-checks"
          data-preview-onclick="const root=this.closest('[data-follow-up-suggestions-primary-demo]'); root.dataset.suggestionSelected='release-checks'; root.querySelectorAll('[data-follow-up-action]').forEach((btn)=>btn.setAttribute('aria-pressed','false')); this.setAttribute('aria-pressed','true');"
        >
          Run the full release checks
        </button>
      </li>
      <li>
        <button type="button" data-follow-up-action="release-summary">
          Draft a release summary
        </button>
      </li>
    </ul>
  </nav>
</Preview>

## Usage

```html
<nav class="follow-up-suggestions" aria-label="Suggested follow-up actions">
  <strong>Continue with</strong>
  <ul><li><button type="button">Review the changed files</button></li></ul>
</nav>
```

### Parameters

| API | Values | Purpose |
| --- | --- | --- |
| Named `<nav>` | Required | Groups next-action controls |
| Direct `<ul>` | Required | Unordered suggestion list |
| Native button or link | Required per item | Submit text or navigate |

## States and variants

Show two to four specific actions. Hide the component when no suggestion is useful instead of filling space with generic prompts.

## Accessibility

The navigation label distinguishes suggestions from task navigation. Buttons describe the action that will occur.

## React

```tsx
import { FollowUpSuggestions } from "@a3s-lab/ui/react";

export function Example() {
  return (
    <FollowUpSuggestions aria-label="Follow-up Suggestions"><a href="#current" aria-current="page">Current page</a></FollowUpSuggestions>
  );
}
```

The adapter replaces only the documented semantic root and adds no wrapper; its children keep the HTML contract shown above.

## Vue

```vue
<script setup>
import { FollowUpSuggestions } from "@a3s-lab/ui/vue";

</script>

<template>
  <FollowUpSuggestions aria-label="Follow-up Suggestions"><a href="#current" aria-current="page">Current page</a></FollowUpSuggestions>
</template>
```

The adapter replaces only the documented semantic root and adds no wrapper; its children keep the HTML contract shown above.
